# flask

./: app.py  index.html  new.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
static/: style.css
static/hum/: m2.TIF  m6.TIF  w1.TIF  w10.TIF  w14.TIF  w17.tif  w2.TIF  w20.TIF  w21.TIF  w5.TIF  w7.tif
static/icon/: c4.html
templates/: goodbye.html  index.html  requirements.txt
